Changed and scaled API. added 'limitations' field, added routing, added TaskService

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Launch Chrome",
+            "request": "launch",
+            "type": "pwa-chrome",
+            "url": "http://localhost:3000",
+            "webRoot": "${workspaceFolder}"
+        },
+        {
             "name": "Launch",
             "type": "go",
             "request": "launch",
@@ -12,6 +19,7 @@
             "program": "${workspaceRoot}/main.go",
             "env": {},
             "args": ["config.yml"]
-        }
+        },
+
     ]
 }
