Added validators for login and signup, added timeout for auth operations in the database, fixed status codes, the config file extended

--- a/config.yml
+++ b/config.yml
@@ -8,6 +8,8 @@ db:
   user: postgres
   database: postgres
   password: password
+  timeout: 5
+  max_connections: 20
 time:
   execution:
     deviation: 0
